# hermes-pet

./: .gitignore  CLAUDE.md  README.md  VERIFICATION.md  package-lock.json  package.json  test-vivipet-agent-flow.sh
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v2-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v2-REQUIREMENTS.md  v2-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/desktop/: RIVE_MODEL_INTEGRATION.md  VERIFICATION.md  electron-builder.yml  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  vite.config.mts  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  rust-toolchain.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs  state.rs
apps/desktop/src-tauri/src/adapter/: events.rs  lifecycle.rs  mod.rs  routes.rs
apps/desktop/src-tauri/src/ai/: config.rs  mod.rs  openai.rs  rules.rs
apps/desktop/src-tauri/src/commands/: ai.rs  mod.rs  models.rs  tts.rs  window.rs
apps/desktop/src-tauri/src/models/: import.rs  mod.rs  scan.rs
apps/desktop/src-tauri/src/tray/: handlers.rs  mod.rs
apps/desktop/src-tauri/src/tts/: config.rs  mod.rs  queue.rs  stream.rs
apps/desktop/src-tauri/src/tts/providers/: cloud.rs  local.rs  mod.rs  system.rs
apps/desktop/src-tauri/src/window/: mod.rs  position.rs
source/docs/: README_EN.md  README_ZH.md
(+211 files in other folders)
