[package]
name = "vivi-pet"
version = "0.2.0"
description = "AI-driven Live2D desktop companion"
authors = ["Hermes Team <team@vivipet.app>"]
edition = "2021"

[lib]
name = "vivi_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-positioner = "2"
tauri-plugin-window-state = "2"
tauri-plugin-log = "2"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
