[package]
name = "vivi-pet"
version = "0.2.0"
description = "AI-driven Live2D desktop companion"
authors = ["Hermes Team <team@vivipet.app>"]
edition = "2021"

[lib]
name = "vivi_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-window-state = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
tokio = { version = "1", features = ["process", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
hound = "3.5"
reqwest = { version = "0.13", features = ["json", "stream"] }
bytes = "1"
futures = "0.3"
base64 = "0.22"
